--- a/app/views/grannies/index.html.erb
+++ b/app/views/grannies/index.html.erb
@@ -1,30 +1,13 @@
-
-
-
 <div class="container" data-controller="map"
                        data-map-markers-value="<%= @markers.to_json %>"
                        data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"
                        data-action="click->map#displayMarkers">
 
-    <span class="titles">Our grannies</span>
+    <h1>Our grannies</h1>
 
     <div class="row">
 
       <div class="col-7">
-
-        <div class="grannies">
-          <% @grannies.each do |granny| %>
-            <%= link_to granny_path(granny), class:"text-decoration-none" do %>
-              <div class="card-granny m-1">
-                <div class="top-card-granny">
-                  <span class="name-granny"><%= granny.name %></span>
-                  <span class="categories-flex">
-                    <% granny.categories.each do |category| %>
-                      <span class="categories"><%= category.name %></span>
-                    <% end %>
-                  </span>
-                  
-      <div class="col-8">
 
           <div class="grannies">
             <% @grannies.each do |granny| %>
@@ -32,15 +15,19 @@
                 <div class="card-granny m-1" data-num="<%= granny.id %>" data-map-target="granny" data-action="mouseover->map#hoverMarkers">
                   <div class="top-card-granny">
                     <div class="name-granny"><%= granny.name %></div>
-                    <div class="categories">Couture</div>
+                      <span class="categories-flex">
+                        <% granny.categories.each do |category| %>
+                          <span class="categories"><%= category.name %></span>
+                        <% end %>
+                      </span>
                   </div>
                     <div id="carouselExampleControls" class="carousel slide">
                       <div class="carousel-inner">
                       <% active = "active" %>
                         <% granny.photos.each do |photo| %>
                           <div class="carousel-item <%= active %>">
-                            <%= cl_image_tag photo.key, height: 120, width: 200, crop: :fill, class:"img-carousel" %>
-                          </div>
+                          <%= cl_image_tag photo.key, height: 140, width: 260, crop: :fill, class:"img-carousel" %>
+                        </div>
                           <% active = "" %>
                         <% end %>
                       </div>
@@ -54,31 +41,10 @@
                       </button>
                       </div>
                   <%# <div class="presentation"><%= granny.presentation</div> %>
-
                 </div>
-                  <div id="carouselExampleControls" class="carousel slide">
-                    <span class="carousel-inner">
-                      <% active = "active" %>
-                      <% granny.photos.each do |photo| %>
-                        <div class="carousel-item <%= active %>">
-                          <%= cl_image_tag photo.key, height: 140, width: 260, crop: :fill, class:"img-carousel" %>
-                        </div>
-                        <% active = "" %>
-                      <% end %>
-                    </span>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Next</span>
-                    </button>
-                  </div>
-              </div>
+              <% end %>
             <% end %>
-          <% end %>
-        </div>
+          </div>
 
       </div>
 
