--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -33,15 +33,19 @@
           </li>
         <% end %>
         <li class="nav-item dropdown">
-          <%= image_tag "granny.jpg", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-          <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+          <% if current_user %>
+          <%= image_tag current_user.photo, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>          <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+          <% else %>
+          <%= image_tag 'avatar.png', class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>          <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+          <% end %>
             <% if current_user %>
               <%= link_to "Mon profil", profile_path(current_user), class: "dropdown-item" %>
+              <%= link_to "Réservations", "#", class: "dropdown-item" %>
+              <%= link_to "Se déconnecter", destroy_user_session_path, class: "dropdown-item", data: {turbo_method: :delete} %>
+            <% else %>
+              <%= link_to "S'inscrire", new_user_registration_path, class: "dropdown-item" %>
+              <%= link_to "Se connecter", new_user_session_path, class: "dropdown-item" %>
             <% end %>
-            <%= link_to "S'inscrire", new_user_registration_path, class: "dropdown-item" %>
-            <%= link_to "Se connecter", new_user_session_path, class: "dropdown-item" %>
-            <%= link_to "Réservations", "#", class: "dropdown-item" %>
-            <%= link_to "Se déconnecter", destroy_user_session_path, class: "dropdown-item", data: {turbo_method: :delete} %>
           </div>
         </li>
       </ul>
